# Cursovaya_6

./: .env.sample  README.md  blogdata.json  permissions.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: post_detail.html  post_list.html
config/: settings.py  urls.py
main/: admin.py  forms.py  models.py  send_email.py  urls.py  views.py
main/management/commands/: check_mailing.py
main/migrations/: 0001_initial.py  0002_mailinglog_delete_messagelog_mailing_clients_and_more.py  0003_alter_client_options_alter_mailing_options_and_more.py  0004_alter_mailing_status.py  0005_alter_mailing_regularity.py  0006_remove_mailinglog_last_mall_mailing_last_mall_and_more.py  0007_client_user_mailing_user_mailinglog_user_and_more.py  0008_alter_mailing_options.py  0009_mailing_is_active.py
main/templates/main/: base.html  base2.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailinglog_list.html  manager_mailing_detail.html  manager_mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: email_verification_message.html  login.html  register.html  reset_password.html  user_detail.html  user_form.html  user_list.html
(+2 files in other folders)
